Modernize to Paper Adventure API and update dependencies
This commit updates the plugin to work with Paper 26.2 and replaces deprecated Spigot APIs with the modern Adventure text component system. Key changes include:

- Updated build.gradle with Paper 3.0.2 plugin, Java 25, and latest dependencies
- Replaced ChatColor methods with legacySection().deserialize() for text rendering
- Migrated item/team metadata setters (setDisplayName, setLore) to component-based methods
- Updated title display from sendTitle() to showTitle() with Duration-based timing
- Replaced AsyncPlayerChatEvent with AsyncChatEvent
- Updated scoreboard API to use Criteria enum
- Replaced SkullMeta.setOwningPlayer() with ResolvableProfile
- Replaced Bukkit.broadcastMessage() with Bukkit.broadcast()
- Organized imports and improved code structure throughout