@@ -1,14 +1,16 @@
 package me.dalibex.UHC_DBasic.utils;
 
-import me.dalibex.UHC_DBasic.UHC_DBasic;
-import org.bukkit.Bukkit;
-import org.bukkit.ChatColor;
-
 import java.io.BufferedReader;
+import java.io.IOException;
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
-import java.util.function.Consumer;
+
+import org.bukkit.Bukkit;
+
+import me.dalibex.UHC_DBasic.UHC_DBasic;
+import static net.kyori.adventure.text.serializer.legacy.LegacyComponentSerializer.legacySection;
 
 /**
  * Utilidad para verificar actualizaciones del plugin de forma asíncrona.
@@ -22,7 +24,7 @@ public class UpdateChecker {
 
     public UpdateChecker(UHC_DBasic plugin) {
         this.plugin = plugin;
-        this.currentVersion = plugin.getDescription().getVersion();
+        this.currentVersion = plugin.getPluginMeta().getVersion();
     }
 
     public static String getLatestVersionFound() {
@@ -35,20 +37,21 @@ public class UpdateChecker {
     public void checkForUpdates() {
         Bukkit.getScheduler().runTaskAsynchronously(plugin, () -> {
             try {
-                URL url = new URL(githubUrl);
+                URL url = URI.create(githubUrl).toURL();
                 HttpURLConnection connection = (HttpURLConnection) url.openConnection();
                 connection.setRequestMethod("GET");
                 connection.setRequestProperty("Accept", "application/vnd.github.v3+json");
                 connection.setRequestProperty("User-Agent", "UHC-Plugin-UpdateChecker");
 
                 if (connection.getResponseCode() == 200) {
-                    BufferedReader in = new BufferedReader(new InputStreamReader(connection.getInputStream()));
-                    StringBuilder response = new StringBuilder();
-                    String line;
-                    while ((line = in.readLine()) != null) {
-                        response.append(line);
+                    StringBuilder response;
+                    try (BufferedReader in = new BufferedReader(new InputStreamReader(connection.getInputStream()))) {
+                        response = new StringBuilder();
+                        String line;
+                        while ((line = in.readLine()) != null) {
+                            response.append(line);
+                        }
                     }
-                    in.close();
 
                     // Parseo simple de JSON para encontrar el tag_name
                     String json = response.toString();
@@ -59,24 +62,24 @@ public class UpdateChecker {
                         if (!currentVersion.equalsIgnoreCase(latestVersion)) {
                             notifyUpdatedVersion(latestVersion);
                         } else {
-                            plugin.getLogger().info("§aThe plugin is updated (v" + currentVersion + ").");
+                            plugin.getLogger().info(() -> "§aThe plugin is updated (v" + currentVersion + ").");
                         }
                     }
                 }
-            } catch (Exception e) {
-                plugin.getLogger().warning("Could not check version: " + e.getMessage());
+            } catch (IOException e) {
+                plugin.getLogger().warning(() -> "Could not check version: " + e.getMessage());
             }
         });
     }
 
     private void notifyUpdatedVersion(String latest) {
-        Bukkit.getConsoleSender().sendMessage(" ");
-        Bukkit.getConsoleSender().sendMessage(ChatColor.GOLD + "--------------------------------------------------");
-        Bukkit.getConsoleSender().sendMessage(ChatColor.YELLOW + " [UHC UPDATE] ¡New version avaliable!");
-        Bukkit.getConsoleSender().sendMessage(ChatColor.WHITE + " Current version: " + ChatColor.RED + currentVersion);
-        Bukkit.getConsoleSender().sendMessage(ChatColor.WHITE + " New version: " + ChatColor.GREEN + latest);
-        Bukkit.getConsoleSender().sendMessage(ChatColor.WHITE + " Download it at: " + ChatColor.AQUA + "https://github.com/Dalibex/UHC_Plugin/releases");
-        Bukkit.getConsoleSender().sendMessage(ChatColor.GOLD + "--------------------------------------------------");
-        Bukkit.getConsoleSender().sendMessage(" ");
+        Bukkit.getConsoleSender().sendMessage(legacySection().deserialize(" "));
+        Bukkit.getConsoleSender().sendMessage(legacySection().deserialize("§6--------------------------------------------------"));
+        Bukkit.getConsoleSender().sendMessage(legacySection().deserialize("§e [UHC UPDATE] ¡New version avaliable!"));
+        Bukkit.getConsoleSender().sendMessage(legacySection().deserialize("§f Current version: §c" + currentVersion));
+        Bukkit.getConsoleSender().sendMessage(legacySection().deserialize("§f New version: §a" + latest));
+        Bukkit.getConsoleSender().sendMessage(legacySection().deserialize("§f Download it at: §bhttps://github.com/Dalibex/UHC_Plugin/releases"));
+        Bukkit.getConsoleSender().sendMessage(legacySection().deserialize("§6--------------------------------------------------"));
+        Bukkit.getConsoleSender().sendMessage(legacySection().deserialize(" "));
     }
 }
